Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.1.27
-
None
-
centos7
Description
I just upgraded from 10.1.26 (very stable) to 10.1.27 and CONNECT with JDBC table types is now hanging
The first few requests work, but then it hangs. Suspect this is somehow related to pooling (ApacheWrapper) since recreating the tables without pooling seems to eliminate the error.
With pooling ON it seems to hang after maybe 8 to 10 queries. No error, just never returns. This would seem to correspond roughly to the default number of connections in the Apache pool. So suspect connections are no longer being free'ed aka closed.
Non-connect tables CAN be queried.
When I turn OFF pooling for the tables - i.e. recreate them without using the ApacheWrapper the system does not appear to hang (50 queries and still ok). So my wild guess is that something changed with how ApacheWrapper works, or possibly since the connections need to go back in the pool, maybe the connections in 10.1.27 are not getting a connection.close() or something.