storage/connect/javaconn.cpp
@@ -17,7 +17,7 @@
 /*  Include relevant MariaDB header file.                              */
 /***********************************************************************/
 #include <my_global.h>
-#include <m_string.h>
+//#include <m_string.h>
 #if defined(__WIN__)
 #include <direct.h>                      // for getcwd
 #if defined(__BORLANDC__)
@@ -57,6 +57,7 @@ extern "C" HINSTANCE s_hModule;           // Saved module handle
 extern char *JvmPath;   // The connect_jvm_path global variable value
 extern char *ClassPath; // The connect_class_path global variable value
 
+char *GetPluginDir(void);
 char *GetJavaWrapper(void);		// The connect_java_wrapper variable value
 
 /***********************************************************************/
@@ -453,7 +454,7 @@ bool JAVAConn::Open(PGLOBAL g)
 		vm_args.options = options;
 		vm_args.ignoreUnrecognized = false; // invalid options make the JVM init fail
 
-																				//=============== load and initialize Java VM and JNI interface =============
+		//=============== load and initialize Java VM and JNI interface =============
 		rc = CreateJavaVM(&jvm, (void**)&env, &vm_args);  // YES !!
 		delete options;    // we then no longer need the initialisation options.
 
